--- a/index.html
+++ b/index.html
@@ -3,12 +3,233 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://fonts.googleapis.com/css?family=Poppins&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
+    <link rel="stylesheet" href="style.css">
     <title>Hot Gadgets |No-1 E-Commerce in Bangladesh</title>
 </head>
 <body>
-    <h1>Project Start</h1>
-
+    <header>
+        <!--Start Header-->
+        <div class="container cc-nav">
+            <nav class="navbar navbar-expand-lg navbar-light bg-white">
+                <a class="navbar-brand" href="#">
+                 <img src="images/logo.png" alt="Logo">
+               </a>
+               <!--Start Nav Manu-->
+               <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav ml-auto font-weight-bold d-flex justify-content-between">
+                  <li class="nav-item">
+                    <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+                  </li>
+                  <li class="nav-item">
+                    <a class="nav-link" href="#product">Product</a>
+                  </li>
+                  <li class="nav-item">
+                      <a class="nav-link" href="#aboutus">About Us</a>
+                  </li>
+                  <li class="nav-item">
+                      <a class="nav-link" href="#contactus">Contact US</a>
+                  </li>
+                </ul>
+              </div>
+             </nav>
+        </div>
+        <!--Carousel Part -->
+        <section class="cc-banner">
+            <div class="container">
+                <div id="carouselExampleIndicators" class="carousel slide cc-carousel" data-ride="carousel">
+                    <ol class="carousel-indicators bg-indicator">
+                        <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+                        <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+                        <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+                    </ol>
+                    <div class="carousel-inner">
+                        <div class="carousel-item active">
+                            <div class="row align-items-center">
+                                <div class="col-md-6 order-1 order-md-0 pr-md-5">
+                                    <h1>Mackbook Pro</h1>
+                                    <p>Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature.
+                                    </p>
+                                    <button class="btn btn-dark">Buy Now &#8594;</button>
+                                </div>
+                                <div class="col-md-6  order-0 order-md-1 pl-md-5">
+                                    <img src="images/banner-products/product-1.png" class="d-block w-100" alt="...">
+                                </div>
+                            </div>
+                        </div>
+                        <div class="carousel-item">
+                            <div class="row align-items-center">
+                                <div class="col-md-6 order-1 order-md-0 pr-md-5">
+                                    <h1>Mi Pro Speaker</h1>
+                                    <p>Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature.
+                                    </p>
+                                    <button class="btn btn-dark">Buy Now &#8594;</button>
+                                </div>
+                                <div class="col-md-6  order-0 order-md-1 pl-md-5">
+                                    <img src="images/banner-products/slider-1.png" class="d-block w-100" alt="...">
+                                </div>
+                            </div>
+                        </div>
+                        <div class="carousel-item">
+                            <div class="row align-items-center">
+                                <div class="col-md-6 order-1 order-md-0 pr-md-5">
+                                    <h1>JBL Boombox</h1>
+                                    <p>Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature.
+                                    </p>
+                                    <button class="btn btn-dark">Buy Now &#8594;</button>
+                                </div>
+                                <div class="col-md-6 order-0 order-md-1 pl-md-5">
+                                    <img src="images/banner-products/slider-3.png" class="d-block w-100" alt="...">
+                                </div>
+                            </div>
+                        </div>
+                        <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+                            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                            <span class="sr-only">Previous</span>
+                          </a>
+                          <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+                            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                            <span class="sr-only">Next</span>
+                          </a>
+                    </div>
+    
+                </div>
+            </div>
+        </section>     
+        <!--Carousel Part End-->
+    </header>
+    <!--Product Mobile Part -->
+    <div class="container cc-productitems">
+        <div class="d-flex align-items-center justify-content-between">
+            <h3 class="font-weight-bold">Smart Phone</h3>
+            <a href="#" class="cc-seeall">See All</a>
+        </div>
+    <!--Product list -->
+        <div class="container cc-productcard">
+                <div class="cc-phoneitems">
+                    <div class="card-deck text-center">
+                        <div class="card">
+                          <img class="card-img-top" src="images/phone/phone-1.png" alt="Card image cap">
+                          <div class="card-body">
+                            <h5 class="card-title">iPhone 11 Pro</h5>
+                            <p class="card-text">Some quick example text to build on
+                                the card title.</p>
+                                <h5>$999</h5>
+                                <button class="btn btn-dark">Buy Now &#8594;</button>
+                          </div>
+                        </div>
+                        <div class="card">
+                          <img class="card-img-top" src="images/phone/phone-2.png" alt="Card image cap">
+                          <div class="card-body">
+                            <h5 class="card-title">Samsung Galaxy Note10+</h5>
+                            <p class="card-text">Some quick example text to build on
+                                the card title.</p>
+                                <h5>$799</h5>
+                                <button class="btn btn-dark">Buy Now &#8594;</button>
+                          </div>
+                        </div>
+                        <div class="card">
+                          <img class="card-img-top" src="images/phone/phone-3.png" alt="Card image cap">
+                          <div class="card-body">
+                            <h5 class="card-title">Nokia NaiNai 420</h5>
+                            <p class="card-text">Some quick example text to build on
+                                the card title.</p>
+                                <h5>$699</h5>
+                                <button class="btn btn-dark">Buy Now &#8594;</button>
+                          </div>
+                        </div>
+                      </div>
+                </div>
+        </div>
+    </div>
+    <!--Product part tow laptop  -->
+    <div class="container cc-productitems">
+        <div class="d-flex align-items-center justify-content-between">
+            <h3 class="font-weight-bold">Laptop / Notebook</h3>
+            <a href="#" class="cc-seeall">See All</a>
+        </div>
+    <!--Laptop items-->
+        <div class="container cc-productcard">
+                <div class="cc-phoneitems">
+                    <div class="card-deck text-center">
+                        <div class="card">
+                          <img class="card-img-top" src="images/laptop/product-1.png" alt="Card image cap">
+                          <div class="card-body">
+                            <h5 class="card-title">Asus VivoBook </h5>
+                            <p class="card-text">Some quick example text to build on
+                                the card title.</p>
+                                <h5>$999</h5>
+                                <button class="btn btn-dark">Buy Now &#8594;</button>
+                          </div>
+                        </div>
+                        <div class="card">
+                          <img class="card-img-top" src="images/laptop/product-2.png" alt="Card image cap">
+                          <div class="card-body">
+                            <h5 class="card-title">Razer Blade 15 </h5>
+                            <p class="card-text">Some quick example text to build on
+                                the card title.</p>
+                                <h5>$27999</h5>
+                                <button class="btn btn-dark">Buy Now &#8594;</button>
+                          </div>
+                        </div>
+                        <div class="card">
+                          <img class="card-img-top" src="images/laptop/product-3.png" alt="Card image cap">
+                          <div class="card-body">
+                            <h5 class="card-title">Xiaomi Mi Notebook Pro</h5>
+                            <p class="card-text">Some quick example text to build on
+                                the card title.</p>
+                                <h5>$999</h5>
+                                <button class="btn btn-dark">Buy Now &#8594;</button>
+                          </div>
+                        </div>
+                      </div>
+                </div>
+        </div>
+    </div>
+    <!--Categories Part -->
+    <section class="container">
+        <h3 class="text-center text-warning"><u>Categories</u></h3>
+        <div class="row d-flex justify-content-between align-items-center text-center">
+            <div class="col-3">
+                <a href="#">
+                    <div class="card mb-3" style="max-width: 18rem;"> 
+                        <div class="card-body text-success">
+                          <img src="images/Categories/bag.png" alt="">
+                        </div>
+                        <div class="card-footer">Bag</div>
+                      </div>
+                </a>
+                
+            </div>
+            <div class="col-3">
+                <a href="#">
+                    <div class="card mb-3" style="max-width: 18rem;"> 
+                        <div class="card-body text-success">
+                          <img src="images/Categories/perfume.png" alt="">
+                        </div>
+                        <div class="card-footer">Beauty</div>
+                      </div>
+                </a>
+                  <br>
+                  <a href="#">
+                    <div class="card mb-3" style="max-width: 18rem;"> 
+                        <div class="card-body text-success">
+                          <img src="images/Categories/shoe.png" alt="">
+                        </div>
+                        <div class="card-footer">Shoes</div>
+                      </div>
+                </a>
+            </div>
+            <div class="col-6">
+                <img src="images/Categories/pale-order.png" class="w-100" alt="">
+            </div>
+        </div>
+    </section>
+     <!--footer Part-->
+      <footer>
+        <small>Copyright © 2020 Hot Gadgets.| Develope by L.R.Sarker.</small>
+      </footer>
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
