--- a/index.html
+++ b/index.html
@@ -189,8 +189,8 @@
     </div>
     <!--Categories Part -->
     <section class="container">
-        <h3 class="text-center text-warning"><u>Categories</u></h3>
-        <div class="row d-flex justify-content-between align-items-center text-center">
+        <h3 class="text-center font-weight-bold"> <span>Categories</span></h3>
+        <div class="row d-flex justify-content-between align-items-center text-center cc-bordercard">
             <div class="col-3">
                 <a href="#">
                     <div class="card mb-3" style="max-width: 18rem;"> 
